# skillhubs

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  rules.md  vite.config.ts
docs/plans/: 2026-02-04-foundation-plan.md  2026-02-04-skillhub-design.md  skills-sh-integration-plan.md
scripts/: gen-icon.cjs  gen-icon.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: registry.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 1_create_tables.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: db.rs  fs.rs  git.rs  mod.rs
src-tauri/src/models/: skill.rs
src/components/: InstallButton.tsx  InstallTargetModal.tsx  SkillCard.tsx  SkillDetailModal.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx
src/data/: registry.ts
src/hooks/: useInstall.ts  useSkills.ts  useSkillsFromAPI.ts
src/lib/: db.ts  git.ts  skillDetail.ts  skillsCache.ts
src/pages/: Discover.tsx  MySkills.tsx  Settings.tsx
src/store/: useStore.ts
src/types/: skill.ts
