[package]
name = "skillhubs"
version = "0.1.0"
description = "A skill management application"
authors = ["skillhubs"]
edition = "2021"

[lib]
path = "src/lib.rs"
name = "skillhub"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = { version = "2", features = [] }
tauri-plugin-http = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
